fixed missing namespaced class preventing nav from showing on small screens (addendum to navbar btn fix)

--- a/sections/navbar/style.css
+++ b/sections/navbar/style.css
@@ -548,7 +548,7 @@
   .navbar .dropdown-menu:after {
     display: none;
   }
-  .btn-navbar {
+  .nav-btn-navbar {
     display: block;
   }
   .nav-collapse {
